--- a/app/assets/templates/words/word.hbs
+++ b/app/assets/templates/words/word.hbs
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <span id="already-guessed-error"></span>
+    <span id="already-guessed-error">Already guessed</span>
     <form id="guess-form" class="pure-form">
         <input type="text" name="guess" id="new_letter_guess">
         <input type="submit" value="Guess"class="pure-button" id="letter-submit">
@@ -18,5 +18,5 @@
   {{/each}}
   </ul>
 
-  <p id="win-message">You win!</p>
+  <p id="result-message"></p>
 </div>
