only display incorrectly guessed letters

--- a/app/assets/templates/words/word.hbs
+++ b/app/assets/templates/words/word.hbs
@@ -13,7 +13,7 @@
   </div>
 
   <ul id="guessed-letters">
-  {{#each guessedLetters}}
+  {{#each wrongLetters}}
     <li>{{this}}</li>
   {{/each}}
   </ul>
