--- a/app/assets/stylesheets/words.css.scss
+++ b/app/assets/stylesheets/words.css.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'DroidSans';
 }
 
-#container {
+#container, #canvas-container {
   margin: auto;
   width: 960px;
   text-align: center;
@@ -73,4 +73,9 @@ li {
   letter-spacing: 0em;
   font-size: 30px;
   color: #7F8C8D;
+}
+
+#canvas {
+  margin-top: 20px;
+  background-color: #E6E6E6;
 }
