display word after loss

--- a/app/assets/stylesheets/words.css.scss
+++ b/app/assets/stylesheets/words.css.scss
@@ -73,6 +73,14 @@ li {
   letter-spacing: 0em;
   font-size: 30px;
   color: #7F8C8D;
+  margin-bottom: 15px;
+}
+
+#word-was {
+  letter-spacing: 0em;
+  font-size: 30px;
+  color: #7F8C8D;
+  margin-top: 0px;
 }
 
 #canvas {
