improve win condition code

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,11 @@
 <div class="pure-g">
-  <h1 id="hangman">Hangman</h1>
+  <h1 id="title">Games in Backbone.js</h1>
+  <div class="pure-u-1-1 nav-links">
+    <ul>
+      <li><a href="#hangman">Hangman</a></li>
+      <li><a href="#tictactoe">Tic Tac Toe Flow</a></li>
+    </ul>
+  </div>
 </div>
 
 <div id="container"></div>
