--- a/app/assets/templates/words/index.hbs
+++ b/app/assets/templates/words/index.hbs
@@ -1,1 +1,3 @@
-<button id="start-button" class="pure-button">Start a new game</button>
+<button id="hangman-start-button" class="pure-button">
+  Start a new game
+</button>
