--- a/app/assets/templates/tictactoe/index.hbs
+++ b/app/assets/templates/tictactoe/index.hbs
@@ -1,3 +1,9 @@
-<button id="ttt-start-button" class="pure-button">
-  Start a new game
-</button>
+<div id="ttt-button-wrapper">
+  <button id="ttt-human">
+    Play against a human
+  </button>
+
+  <button id="ttt-gregbot" class="pure-button">
+    Play against Gregbot
+  </button>
+</div>
