--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -21,4 +21,10 @@
       </ul>
 
     </div>
+
+    <div class="pure-u-1-1">
+      <div id="gregbot-thinking">Gregbot is thinking...</div>
+      <div id="winner">Winner</div>
+    </div>
   </div>
+</div>
