add message waiting for player to join

--- a/app/assets/stylesheets/tictactoe.css.scss
+++ b/app/assets/stylesheets/tictactoe.css.scss
@@ -33,6 +33,14 @@
   font-size: 25px;
 }
 
+#waiting-for-opponent {
+  display: none;
+  letter-spacing: 0;
+  margin-top: 10px;
+  margin-left: 40px;
+  font-size: 25px;
+}
+
 .row {
   margin: 0 auto;
   margin-bottom: -5px;
