--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -24,6 +24,7 @@
 
     <div class="pure-u-1-1">
       <div id="gregbot-thinking">Gregbot is thinking...</div>
+      <div id="waiting-for-opponent">Waiting for opponent...</div>
       <div id="winner">Winner</div>
     </div>
   </div>
