buttons do not display multiple times after win

--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -26,6 +26,7 @@
       <div id="gregbot-thinking">Gregbot is thinking...</div>
       <div id="waiting-for-opponent">Waiting for opponent...</div>
       <div id="winner">Winner</div>
+      <div id="buttons-after-win"></div>
     </div>
   </div>
 </div>
