--- a/app/assets/stylesheets/tictactoe.css.scss
+++ b/app/assets/stylesheets/tictactoe.css.scss
@@ -25,15 +25,7 @@
   height: 350px;
 }
 
-#gregbot-thinking {
-  display: none;
-  letter-spacing: 0;
-  margin-top: 10px;
-  margin-left: 40px;
-  font-size: 25px;
-}
-
-#waiting-for-opponent {
+.message {
   display: none;
   letter-spacing: 0;
   margin-top: 10px;
