--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -23,9 +23,10 @@
     </div>
 
     <div class="pure-u-1-1">
-      <div id="gregbot-thinking">Gregbot is thinking...</div>
-      <div id="waiting-for-opponent">Waiting for opponent...</div>
-      <div id="winner">Winner</div>
+      <div class="message" id="your-turn">Your turn</div>
+      <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
+      <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
+      <div class="message" id="winner">Winner</div>
       <div id="buttons-after-win"></div>
     </div>
   </div>
