refactor views, move tictactoe tests to folder

--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -24,6 +24,7 @@
 
     <div class="pure-u-1-1">
       <div class="message" id="your-turn">Your turn</div>
+      <div class="message" id="opponent-turn">Your turn</div>
       <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
       <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
       <div class="message" id="winner">Winner</div>
