--- a/app/assets/templates/tictactoe/index.hbs
+++ b/app/assets/templates/tictactoe/index.hbs
@@ -1,9 +1,12 @@
+<div class="span10 offset1">
 <div id="ttt-button-wrapper">
-  <button id="ttt-human">
+  <button id="ttt-human" class="ttt-start-button">
     Play against a human
   </button>
 
-  <button id="ttt-gregbot" class="pure-button">
+  <button id="ttt-gregbot" class="ttt-start-button">
     Play against Gregbot
   </button>
 </div>
+</div>
+
