--- a/app/assets/templates/words/index.hbs
+++ b/app/assets/templates/words/index.hbs
@@ -1,3 +1,5 @@
-<button id="hangman-start-button" class="pure-button">
-  Start a new game
-</button>
+<div class="span6 offset3 hangman-start-wrapper">
+  <button id="hangman-start-button" class="pure-button">
+    Start a new game
+  </button>
+</div>
