--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -6,9 +6,12 @@
   margin-top: 0;
 }
 
+.container {
+  margin-top: 40px;
+}
+
 .nav-links {
   text-align: center;
-  letter-spacing: 0;
   ul {
     display: inline-block;
     padding: 40px;
@@ -19,7 +22,9 @@
   a {
     text-decoration: none;
     color: #34495E;
-    :active {
+    a:hover {
+    }
+    a:active {
       background-color: gray;
     }
   }
