--- a/app/assets/stylesheets/words.css.scss
+++ b/app/assets/stylesheets/words.css.scss
@@ -7,16 +7,8 @@ body {
   font-family: 'DroidSans';
 }
 
-#container, #canvas-container {
-  margin: auto;
-  width: 960px;
+.hangman-start-wrapper {
   text-align: center;
-}
-
-#letter-submit {
-  font-size: 20px;
-  color: white;
-  background-color: #34495E;
 }
 
 li {
@@ -28,45 +20,56 @@ li {
   text-transform: uppercase;
 }
 
-#new_letter_guess {
+.guess-form-wrapper {
+  margin-top: 20px;
   text-align: center;
-  padding: 10px;
-  font-size: 30px;
-  color: #BDC3C7;
-  width: 118px;
-  display: block;
-  margin: 0 auto;
-  text-transform: uppercase;
+  #guess-form {
+    input[type=text] {
+      padding: 10px;
+      font-size: 30px;
+      color: #BDC3C7;
+      width: 118px;
+      display: block;
+      margin: 0 auto;
+      text-transform: uppercase;
+    }
+    input[type=submit] {
+      width: 140px;
+      padding: 8px 0;
+      font-size: 20px;
+      color: white;
+      background-color: #34495E;
+    }
+  }
 }
 
-#display {
+.display {
+  text-align: center;
   margin-bottom: 30px;
   color: #BDC3C7;
   text-transform: uppercase;
   font-size: 40px;
-  padding-left: 1em;
   letter-spacing: 1em;
 }
 
 #guessed-letters {
+  text-align: center;
   padding-left: 0;
 }
 
 #already-guessed-error {
+  text-align: center;
   display: none;
   color: #C0392B;
-  letter-spacing: 0em;
 }
 
 #result-message {
-  letter-spacing: 0em;
   font-size: 30px;
   color: #7F8C8D;
   margin-bottom: 15px;
 }
 
 #word-was {
-  letter-spacing: 0em;
   font-size: 30px;
   color: #7F8C8D;
   margin-top: 0px;
@@ -75,4 +78,8 @@ li {
 #canvas {
   margin-top: 20px;
   background-color: #E6E6E6;
+}
+
+#canvas-container {
+  text-align: center;
 }
