--- a/app/assets/templates/canvas/canvas.hbs
+++ b/app/assets/templates/canvas/canvas.hbs
@@ -1,1 +1,3 @@
-<canvas id="canvas" height='300' width='300'></canvas>
+<div class="span6 offset3">
+  <canvas id="canvas" height='300' width='300'></canvas>
+</div>
