--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -1,34 +1,28 @@
-<div class="pure-g">
-  <div class="pure-u-1-1 board">
+<div class="board span6 offset3">
 
-    <div class="pure-u-1-1">
-      <ul class="row">
-        <div class="square" id="top-left"></div>
-        <div class="square" id="top-middle"></div>
-        <div class="square" id="top-right"></div>
-      </ul>
+  <ul class="board-row">
+    <li><div class="square" id="top-left"></div></li>
+    <li><div class="square inner-row" id="top-middle"></div></li>
+    <li><div class="square" id="top-right"></div></li>
+  </ul>
 
-      <ul class="row">
-        <div class="square" id="middle-left"></div>
-        <div class="square" id="middle-middle"></div>
-        <div class="square" id="middle-right"></div>
-      </ul>
+  <ul class="board-row">
+    <li><div class="square" id="middle-left"></div></li>
+    <li><div class="square inner-row" id="middle-middle"></div></li>
+    <li><div class="square" id="middle-right"></div></li>
+  </ul>
 
-      <ul class="row">
-        <div class="square" id="bottom-left"></div>
-        <div class="square" id="bottom-middle"></div>
-        <div class="square" id="bottom-right"></div>
-      </ul>
+  <ul class="board-row">
+    <li><div class="square" id="bottom-left"></div></li>
+    <li><div class="square inner-row" id="bottom-middle"></div></li>
+    <li><div class="square" id="bottom-right"></div></li>
+  </ul>
 
-    </div>
+  <div class="message" id="your-turn">Your turn</div>
+  <div class="message" id="opponent-turn">Your turn</div>
+  <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
+  <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
+  <div class="message" id="winner"></div>
 
-    <div class="pure-u-1-1">
-      <div class="message" id="your-turn">Your turn</div>
-      <div class="message" id="opponent-turn">Your turn</div>
-      <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
-      <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
-      <div class="message" id="winner">Winner</div>
-      <div id="buttons-after-win"></div>
-    </div>
-  </div>
 </div>
+
