--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,10 @@
   <%= javascript_include_tag "application" %>
   <script src='https://cdn.firebase.com/v0/firebase.js'></script>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.2.0/pure-min.css">
 </head>
 <body>
 
-  <div class="pure-g">
+  <div class="container">
       <%= yield %>
   </div>
 
