--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,13 +1,19 @@
-<div class="pure-g">
-  <h1 id="title">Games in Backbone.js</h1>
-  <div class="pure-u-1-1 nav-links">
-    <ul>
-      <li><a href="#hangman">Hangman</a></li>
-      <li><a href="#tictactoe">Tic Tac Toe Flow</a></li>
-    </ul>
+<div class="row">
+  <div class="span8 offset2">
+    <h1 id="title">Games in Backbone.js</h1>
+    <div class="nav-links">
+      <ul>
+        <li><a href="#hangman">Hangman</a></li>
+        <li><a href="#tictactoe">Tic Tac Toe Flow</a></li>
+      </ul>
+    </div>
   </div>
 </div>
 
-<div id="container"></div>
+<div class="row" id="main-container">
+  <!-- <div id="main-container"></div> -->
+</div>
 
-<div id="canvas-container"></div>
+<div class="row">
+  <div id="canvas-container"></div>
+</div>
