fix button display

--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -24,5 +24,7 @@
   <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
   <div class="message" id="winner"></div>
 
+
 </div>
 
+<div id="buttons-after-win"></div>
