work on styling

--- a/app/assets/templates/tictactoe/index.hbs
+++ b/app/assets/templates/tictactoe/index.hbs
@@ -1,10 +1,10 @@
 <div class="span10 offset1">
 <div id="ttt-button-wrapper">
-  <button id="ttt-human" class="ttt-start-button">
+  <button id="ttt-human" class="game-start-button">
     Play against a human
   </button>
 
-  <button id="ttt-gregbot" class="ttt-start-button">
+  <button id="ttt-gregbot" class="game-start-button">
     Play against Gregbot
   </button>
 </div>
