--- a/app/assets/templates/words/index.hbs
+++ b/app/assets/templates/words/index.hbs
@@ -1,5 +1,5 @@
 <div class="span6 offset3 hangman-start-wrapper">
-  <button id="hangman-start-button" class="pure-button">
+  <button id="hangman-start-button" class="game-start-button">
     Start a new game
   </button>
 </div>
