--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,8 +10,7 @@
   </div>
 </div>
 
-<div class="row" id="main-container">
-  <!-- <div id="main-container"></div> -->
+<div id="main-container">
 </div>
 
 <div class="row">
