fix button styling

--- a/app/assets/stylesheets/tictactoe.css.scss
+++ b/app/assets/stylesheets/tictactoe.css.scss
@@ -3,8 +3,9 @@
 }
 
 .game-start-button {
+  color: #34495E;
+  background: linear-gradient(to bottom, #C0C0C0, white);
   font-size: 35px;
-  color: white;
   padding: 20px;
   border: 0;
 }
