--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -16,14 +16,13 @@
     margin-left: 0;
     display: inline-block;
     padding: 40px;
-    :hover {
-      background-color: gray;
-    }
   }
   a {
     text-decoration: none;
     color: #34495E;
-    a:hover {
+    :hover {
+      text-decoration: none;
+      color: red;
     }
     a:active {
       background-color: gray;
@@ -31,7 +30,9 @@
   }
 }
 
+button {
+}
+
 #hangman-start-button {
   font-size: 35px;
-  color: white;
 }
