--- a/app/assets/templates/words/word.hbs
+++ b/app/assets/templates/words/word.hbs
@@ -24,6 +24,8 @@
 </div>
 
 <div class="row">
-  <p id="result-message"></p>
-  <p id="word-was"></p>
+  <div class="span6 offset3 hangman-result">
+    <p id="result-message"></p>
+    <p id="word-was"></p>
+  </div>
 </div>
