--- a/app/assets/templates/words/word.hbs
+++ b/app/assets/templates/words/word.hbs
@@ -2,17 +2,18 @@
   <div class="span8 offset2">
     <div class="display">
       <p>{{display}}</p>
-      <p>{{underscores}}</p>
     </div>
   </div>
 </div>
 
 <div class="row guess-form-wrapper">
-  <span id="already-guessed-error">Already guessed</span>
-  <form id="guess-form" class="pure-form">
-      <input type="text" name="guess" id="new_letter_guess">
-      <input type="submit" value="Guess" class="btn" id="letter-submit">
-  </form>
+  <div class='span8 offset2'>
+    <span id="already-guessed-error">Already guessed</span>
+    <form id="guess-form" class="pure-form">
+        <input type="text" name="guess" id="new_letter_guess">
+        <input type="submit" value="Guess" class="btn" id="letter-submit">
+    </form>
+  </div>
 </div>
 
 <div class="row">
