remove names from human ttt, fix display of messages

--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -19,12 +19,15 @@
   </ul>
 
   <div class="message" id="your-turn">Your turn</div>
-  <div class="message" id="opponent-turn">Your turn</div>
+  <div class="message" id="opponent-turn">Opponent's turn</div>
   <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
   <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
   <div class="message" id="winner"></div>
 
+</div>
 
+<div class="span2">
+  <div id="playernum"></div>
 </div>
 
 <div id="buttons-after-win"></div>
