--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -1,4 +1,4 @@
-<div class="board span6 offset3">
+<div class="board span6 offset1">
 
   <ul class="board-row">
     <li><div class="square" id="top-left"></div></li>
@@ -26,7 +26,15 @@
 
 </div>
 
-<div class="span2">
+<div class="span4">
+  <div id="chat">
+    <div id="inputs">
+      <input type='text' id='nameInput' placeholder='Name'>
+      <input type='text' id='messageInput' placeholder='Message...'>
+    </div>
+    <div id="chatbox"></div>
+  </div>
+
   <div id="playernum"></div>
 </div>
 
