fix more than two people joining the game

--- a/app/assets/templates/tictactoe/game.hbs
+++ b/app/assets/templates/tictactoe/game.hbs
@@ -23,6 +23,7 @@
   <div class="message" id="gregbot-thinking">Gregbot is thinking...</div>
   <div class="message" id="waiting-for-opponent">Waiting for opponent...</div>
   <div class="message" id="winner"></div>
+  <div class="message" id="game-full">The game is full</div>
 
 </div>
 
